reintroduced candidate ID, added warning banner and fixed spacing on modal button

--- a/src/components/common/modal-return-button/modal-return-button.scss
+++ b/src/components/common/modal-return-button/modal-return-button.scss
@@ -1,6 +1,11 @@
 @import "src/theme/sass-partials/buttons";
 
 :host {
+  .button-padding {
+    position: absolute;
+    top: 13px;
+  }
+
   .modal-return-button {
     @extend .mes-primary-button;
     margin-top: 20px;
